--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,8 @@
 {
     "cSpell.words": [
+        "bluesky",
         "customise",
-        "ibrahim"
+        "ibrahim",
+        "Ibrahimjasi"
     ]
 }
